@@ -1,3 +1,11 @@
+Summary of important user-visible changes for image 2.0.1:
+-------------------------------------------------------------------
+
+ ** The plot produced by `imhist' is correctly scaled on the X axis so that the
+    colorbar corresponds to the actual intensity of the stems; the given
+    colormarp is used on the colorbar for indexed images; and the stems no
+    longer display the markers at their top.
+
 Summary of important user-visible changes for image 2.0.0:
 -------------------------------------------------------------------
 
